<resources>

    <string name="hint_name">Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="thank_rate">Thank you for rating</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re Enter New Password</string>
    <string name="verification">VERIFICATION</string>
    <string name="please_type_the_verification_code_sent_to_your_mobile">Please type the verification code sent to your mobile</string>
    <string name="click_here_to_resend">Click here to resend</string>
    <string name="picture">Picture</string>
    <string name="type">type</string>
    <string name="order">order</string>
    <string name="payment">Payment</string>
    <string name="submit_rating">Submit Rating</string>


</resources>