<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".LoginActivity"
    android:background="@drawable/back1"
    >


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_login"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="90dp"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif-smallcaps"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_baseline_password_24"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="540dp"
            android:background="@drawable/button_shape"
            android:text="@string/text_login"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="610dp"
            android:gravity="center"
            android:text="@string/text_not_member"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="650dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        />

</RelativeLayout>