<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".RegisterActivity"
    android:background="@drawable/back2"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_register"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/lay_name"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Reg_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/lay_mail"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Reg_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="280dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_baseline_password_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Reg_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="360dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_baseline_password_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Reg_Con_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:background="@drawable/button_shape"
        android:text="@string/text_register"
        />


</RelativeLayout>